--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -7,11 +7,16 @@ body {
   background: #eee;
   font-family: Besley, serif;
 }
-
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  box-sizing: border-box;
+  margin: 10px;
+  /* gap: 16px; */
 }
 
 .profile-image {
@@ -45,4 +50,18 @@ a {
 
 ul {
   list-style-type: none;
+  display: inline-flex;
+}
+
+.notifications {
+  margin-left: auto;
+  gap: 20px;
+  align-content: space-between;
+  margin-right: 20px;
+  height: 32px;
+  width: 200px;
+}
+
+.leftside {
+  gap: 20px;
 }
